# chess

./: CMakeLists.txt  build.sh  readme.md
shader/: board.frag  board.vert
src/: GLFW_wnd.cpp  GLFW_wnd.h  board.cpp  board.h  chess.cpp  chess.h  client.h  connection.h  filter.h  game.cpp  game.h  gl_render.h  glad.c  glad.h  log.h  main.cpp  opengl.cpp  opengl.h  server.h  test.cpp  types.h  window.h
